타이머 기반 시간 점수 추가